--- a/index.html
+++ b/index.html
@@ -1,41 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Aboreto&family=DynaPuff&family=Edu+VIC+WA+NT+Beginner&family=Lobster&family=Silkscreen&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="shortcut icon"
-      type="image/jpg"
-      href="./assets/images/favicon.ico"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=DynaPuff&family=Edu+VIC+WA+NT+Beginner&family=Lobster&family=Silkscreen&display=swap" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/jpg" href="./assets/images/favicon.ico" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous" />
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>Moive Picker</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <nav class="navbar bg-dark py-3">
-      <div class="container-fluid justify-content-center w-75">
-        <form class="d-flex col-6" role="search" id="btn-submit">
-          <select
-            class="form-select"
-            id="genrePicker"
-            aria-label="Default select example"
-          >
+        <div class="container-fluid justify-content-center w-75">
+            <form class="d-flex col-6" role="search" id="btn-submit">
+                <select class="form-select" id="genrePicker" aria-label="Default select example">
             <option selected>Please select your movie genre!</option>
             <option value="35" id="35">Comedy</option>
             <option value="27" id="27">Horror</option>
@@ -43,22 +28,19 @@
             <option value="28" id="28">Action</option>
             <option value="878" id="878">Sci-fi</option>
           </select>
-        </form>
-      </div>
+            </form>
+        </div>
     </nav>
     <main>
-      <section class="text-center py-3" id="intro-page">
-        <h2 id="h2El">Welcome to Our Movie Finder!</h2>
-        <h3 id="h3El">Pick a genre to find a movie and watch the trailer!</h3>
-      </section>
-      <!-- card 1 -->
-      <section
-        id="cardholder"
-        class="row justify-content-center gap-3 row-cols-1 row-cols-md-3 my-auto g-4"
-      >
-        <!-- Modal -->
-        <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <!-- <div class="modal" id="videoModal">
+        <section class="text-center py-3" id="intro-page">
+            <h2 id="h2El">Welcome to Our Movie Finder!</h2>
+            <h3 id="h3El">Pick a genre to find a movie and watch the trailer!</h3>
+        </section>
+        <!-- card 1 -->
+        <section id="cardholder" class="row justify-content-center row-cols-lg-2 row-cols-md-1 g-4">
+            <!-- Modal -->
+            <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <!-- <div class="modal" id="videoModal">
           <div class="modal-dialog">
             <div class="modal-content">
               <div class="modal-header">
@@ -86,50 +68,28 @@
 
           </div>
         </div> -->
-      </section>
+        </section>
     </main>
     <footer>
-      
 
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="videoModal"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog modal-xl">
-          <div class="modal-content bg-dark">
-            <div class="modal-body d-flex justify-content-end">
-              <button
-                type="button"
-                class="btn-close btn-close-white"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
+
+        <!-- Modal -->
+        <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content bg-dark">
+                    <div class="modal-body d-flex justify-content-end">
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body d-flex"><iframe width="1366" height="728" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></div>
+                </div>
             </div>
-            <div class="modal-body d-flex"><iframe
-                width="1366"
-                height="728"
-                src="https://www.youtube.com/embed/dQw4w9WgXcQ"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen=""
-              ></iframe></div>
-          </div>
         </div>
-      </div>
     </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
-  </body>
+</body>
+
 </html>
